# opcua-restful-server

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build_release.bat  build_release.sh  vcpkg-configuration.json  vcpkg.json
mysql/include/jdbc/cppconn/: exception.h
server/: CMakeLists.txt
server/include/: client.h  data_cache.h  mysql.h  types.h
server/src/: client.cc  data_cache.cc  main.cc  mysql.cc
